# EnterpriseDataManager

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  ENV_NOTE.md  MUTUAL_FUND_API_DOCUMENTATION.md  README.md  RENDER_DEPLOYMENT.md  add_test_fund.py  analytics_generator.py  analyze_excel.py  analyze_excel_files.py  api.py  app.py  app_updated.py  bse_star_service.py  check_columns.py  check_db.py  cloudbuild.yaml  config.py  create_tables.py  deploy-requirements.txt  deploy.sh  fund_api.py  fund_comparison_tool.py  fund_data_importer.py  hyperverge_service.py  import_basic_data.py  import_excel_data.py  import_fund_data.py  import_portfolio_nav.py  import_status.json  import_status.py  import_test_data.py  import_test_data_simple.py  import_test_holdings.py  insert_test_fund.py  main.py  main_updated.py  (+19 more)
attached_assets/: Pasted--0-Unique-No-24099-non-null-int64-1-Scheme-Code-24099-no-1751377022756_1751377022756.txt  Pasted--File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-sqlalchemy-engine-base-py--1751042871756_1751042871757.txt  Pasted-def-import-factsheet-data-self-df-clear-existing-False-batch-size-1000-logger-info-f-Import-1751053158142_1751053158143.txt  clean_data.py  docs_1751049176534.html  documentation_1751049176533.html  factsheet_testdata.xlsx  fund_data_importer_1751051759505.py  main_dashboard_1751049176532.html  navtimeseries_testdata.xlsx  returns_testdata.xlsx
data/: README.md  __init__.py  fund_data_importer.py  import_all.py  quick_import.py
static/: style.css
temp_uploads/: portfolio_data.xlsx
templates/: api_test.html  index.html  main_dashboard.html  upload.html
tests/: test_api.py  test_funds_api.py
