[tool.poetry]
name = "mutual-fund-api"
version = "1.0.0"
description = "A comprehensive RESTful API for mutual fund management focusing on fund operations and tracking"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/mutual-fund-api"
keywords = ["mutual-fund", "finance", "investment", "api", "flask"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
api = ">=0.0.7"
email-validator = ">=2.2.0"
flask-login = ">=0.6.3"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
marshmallow = ">=3.26.1"
psycopg2-binary = ">=2.9.10"
werkzeug = ">=3.1.3"
flask-wtf = ">=1.2.2"
sqlalchemy = "2.0.39"
pyjwt = ">=2.10.1"
requests = ">=2.32.3"
pandas = ">=2.2.3"
openpyxl = ">=3.1.5"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mutual-fund-api"
version = "1.0.0"
description = "A comprehensive RESTful API for mutual fund management focusing on fund operations and tracking"
requires-python = ">=3.11"
dependencies = [
    "api>=0.0.7",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "marshmallow>=3.26.1",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.39",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
]
